<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".add.AddActivity">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label"
        android:textSize="24sp" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_label"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/surnameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/surname_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/surnameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/ageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/ageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dniLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dni_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/dniText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/jobLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/jobText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_label"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp" />
</LinearLayout>